--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Configuration\ChannelGraphTester.cs" />
     <Compile Include="Configuration\ChannelNodeTester.cs" />
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
+    <Compile Include="Configuration\HandlerChain_Exception_Handling_Rules_Registration_Tester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="envelope_handlers_are_registered_in_the_right_order.cs" />
     <Compile Include="ErrorHandling\DelayedRetryContinuationTester.cs" />
@@ -115,6 +116,8 @@
     <Compile Include="ErrorHandling\ErrorReportTester.cs" />
     <Compile Include="ErrorHandling\ExceptionHandlerBehaviorTester.cs" />
     <Compile Include="ErrorHandling\ExceptionMatchingExpression_and_ExpressionMatch_Tester.cs" />
+    <Compile Include="ErrorHandling\ExceptionTypeMatchTester.cs" />
+    <Compile Include="ErrorHandling\MoveToErrorQueueHandlerTester.cs" />
     <Compile Include="ErrorHandling\MovetoErrorQueueTester.cs" />
     <Compile Include="ErrorHandling\RequeueContinuationTester.cs" />
     <Compile Include="Events\ExpiringListenerCleanupTester.cs" />
