--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Async\AsyncChainExecutionContinuationTester.cs" />
     <Compile Include="Async\AsyncHandlerInvokerTester.cs" />
+    <Compile Include="Async\AsynchHandlingTester.cs" />
     <Compile Include="Async\when_invoking_with_cascading_messages.cs" />
     <Compile Include="Configuration\AllInMemoryQueues_Mechanics_Tester.cs" />
     <Compile Include="Configuration\ChannelGraphTester.cs" />
