--- a/ripple.config
+++ b/ripple.config
@@ -14,11 +14,23 @@
   </Feeds>
   <Nugets>
     <Dependency Name="Bottles" Version="1.2.0.546" Mode="Float" />
+    <Dependency Name="BottleServiceRunner" Version="1.2.0.548" Mode="Float" />
     <Dependency Name="FubuCore" Version="1.2" Mode="Float" />
     <Dependency Name="FubuMVC.Core" Version="1.2.0.1598" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.527" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.560" Mode="Float" />
+    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.544" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.6.301" Mode="Float" />
+    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.159" Mode="Float" />
+    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.310" Mode="Float" />
     <Dependency Name="FubuMVC.Katana" Version="1.2.0.1598" Mode="Float" />
+    <Dependency Name="FubuMVC.Media" Version="0.9.5.402" Mode="Float" />
+    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.177" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1598" Mode="Float" />
+    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.640" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="1.0.0.544" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1598" Mode="Float" />
+    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.635" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.179" Mode="Float" />
     <Dependency Name="LightningQueues" Version="0.1.0.32" Mode="Float" />
@@ -27,6 +39,7 @@
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
+    <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
