--- a/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
+++ b/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Full_end_to_end_delayed_message_processing_with_Lightning_Queues.cs" />
+    <Compile Include="Full_end_to_end_error_processing_with_LightningQueues.cs" />
     <Compile Include="PersistentQueueTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LightningQueuesIntegrationTester.cs" />
