--- a/src/DiagnosticsHarness/ripple.dependencies.config
+++ b/src/DiagnosticsHarness/ripple.dependencies.config
@@ -15,7 +15,9 @@ FubuMVC.Navigation
 FubuMVC.OwinHost
 FubuMVC.SlickGrid
 FubuMVC.Spark
+FubuMVC.StructureMap
 FubuMVC.TwitterBootstrap
 HtmlTags
 Owin
 Spark
+structuremap
