--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -122,6 +122,7 @@
     <Compile Include="ErrorHandling\DelayedRetryContinuationTester.cs" />
     <Compile Include="ErrorHandling\ErrorHandlerBehavior_attachment_to_the_handler_chains.cs" />
     <Compile Include="ErrorHandling\ErrorHandlerTester.cs" />
+    <Compile Include="ErrorHandling\ErrorHandling_services_have_descriptions_for_diagnostics.cs" />
     <Compile Include="ErrorHandling\ErrorReportTester.cs" />
     <Compile Include="ErrorHandling\ExceptionHandlerBehaviorTester.cs" />
     <Compile Include="ErrorHandling\ExceptionMatchingExpression_and_ExpressionMatch_Tester.cs" />
