--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Runtime\EnvelopeModifier.cs" />
     <Compile Include="Runtime\EnvelopeSender.cs" />
     <Compile Include="Runtime\EnvelopeToken.cs" />
+    <Compile Include="Runtime\FailureAcknowledgement.cs" />
     <Compile Include="Runtime\HeaderWrapper.cs" />
     <Compile Include="Runtime\IEnvelopeModifier.cs" />
     <Compile Include="Runtime\Invocation\Batching\BatchMessage.cs" />
