--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Runtime\Invocation\DelayedEnvelopeHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\DeserializationFailureContinuationTester.cs" />
     <Compile Include="Runtime\Invocation\HandlerPipelineTester.cs" />
+    <Compile Include="Runtime\Invocation\NoSubscriberHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\ResponseEnvelopeHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\StubServiceFactory.cs" />
     <Compile Include="Runtime\Invocation\WhenInvokingWithNoHandlerForMessageType.cs" />
