--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -118,6 +118,11 @@
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
     <Compile Include="Configuration\HandlerChain_Exception_Handling_Rules_Registration_Tester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
+    <Compile Include="Docs\GettingStarted\GettingStartedApplicationSource.cs" />
+    <Compile Include="Docs\GettingStarted\GettingStartedSettings.cs" />
+    <Compile Include="Docs\GettingStarted\GettingStartedTester.cs" />
+    <Compile Include="Docs\GettingStarted\GettingStartedTransportRegistry.cs" />
+    <Compile Include="Docs\GettingStarted\Handlers.cs" />
     <Compile Include="envelope_handlers_are_registered_in_the_right_order.cs" />
     <Compile Include="ErrorHandling\DelayedRetryContinuationTester.cs" />
     <Compile Include="ErrorHandling\ErrorHandlerBehavior_attachment_to_the_handler_chains.cs" />
