--- a/src/FubuTransportation.Docs/FubuTransportation.Docs.csproj
+++ b/src/FubuTransportation.Docs/FubuTransportation.Docs.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
